--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-cmake==0.9.0
-Django==1.11.8
-dlib==19.9.0
-imutils==0.4.5
-numpy==1.13.3
-opencv-python==3.4.0.12
-Pillow==4.0.0
-pytz==2017.3
-six==1.10.0
-tornado==4.2
+asgiref==3.7.2
+cmake==3.27.6
+Django==4.2.6
+dlib==19.24.2
+imutils==0.5.4
+numpy==1.26.0
+opencv-python==4.8.1.78
+Pillow==10.0.1
+pytz==2023.3.post1
+six==1.16.0
+sqlparse==0.4.4
+tornado==6.3.3
+typing_extensions==4.8.0
